<resources>
    <string name="app_name">SM41-ShakeIt</string>
    <string name="action_settings">Settings</string>
    <string name="instellingen">Instellingen</string>
    <string name="contacten">Contacten</string>
    <string name="ontmoeten">Mensen ontmoeten</string>
    <string name="personen">Aantal personen</string>
    <string name="range">Kilometer range</string>
    <string name="budget">Budget  €</string>
    <string name="tijd">Tijd</string>
    <string name="minuten">Min</string>
    <string name="shake">Shake it!</string>
    <string name="activiteit_naam">Shake it!</string>
    <string name="continue_button">">"</string>
    <string name="acceptActivityButton">"Accept activity!"</string>
    <string name="denyActivityButton">"Deny activity!"</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
